// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PluginTerminal render loading 1`] = `
<div
  class="Component-window-0-1-11 Component-windowBright-0-1-13 Component-windowAutoStretch-0-1-12"
  tabindex="1"
>
  <div
    class=" Component-header-0-1-16"
  >
    <p
      class="Component-title-0-1-18"
    >
      Dependencies
    </p>
    <div
      class="Component-button-0-1-17"
    >
      <button
        class="btn btn-outline-primary btn-sm"
        data-testid="1_filter-button"
        type="button"
      >
        <span
          class=" Component-root-0-1-21 Component-size-m-0-1-23"
        >
          <i
            class="material-icons Component-size-i-m-0-1-26"
          >
            filter_list
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="Component-windowBody-0-1-1  Component-body-0-1-35"
  >
    <div
      class="Component-spinner-0-1-3"
    >
      <div
        class="spinner-grow"
      />
    </div>
  </div>
</div>
`;

exports[`PluginTerminal render with data 1`] = `
<div
  class="Component-window-0-1-11 Component-windowBright-0-1-13 Component-windowAutoStretch-0-1-12"
  tabindex="1"
>
  <div
    class=" Component-header-0-1-16"
  >
    <p
      class="Component-title-0-1-18"
    >
      Dependencies
    </p>
    <div
      class="Component-button-0-1-17"
    >
      <button
        class="btn btn-outline-primary btn-sm"
        data-testid="1_filter-button"
        type="button"
      >
        <span
          class=" Component-root-0-1-21 Component-size-m-0-1-23"
        >
          <i
            class="material-icons Component-size-i-m-0-1-26"
          >
            filter_list
          </i>
        </span>
      </button>
    </div>
  </div>
  <div
    class="Component-windowBody-0-1-1  Component-body-0-1-35"
  >
    <ul
      class="Component-ul-0-1-6 "
    >
      <li
        class="DependencyRaw-li-0-1-36"
      >
        <a
          class="DependencyRaw-link-0-1-37"
          href="https://www.npmjs.com/package/react"
          target="_blank"
        >
          <div
            class="DependencyRaw-name-0-1-38"
          >
            react
          </div>
          <div
            class="DependencyRaw-version-0-1-39"
          >
            <span
              class="DependencyRaw-versionInCaseUpToDate-0-1-41"
            >
              16.8.4
            </span>
          </div>
        </a>
      </li>
      <li
        class="DependencyRaw-li-0-1-36"
      >
        <a
          class="DependencyRaw-link-0-1-37"
          href="https://www.npmjs.com/package/react-dom"
          target="_blank"
        >
          <div
            class="DependencyRaw-name-0-1-38"
          >
            react-dom
          </div>
          <div
            class="DependencyRaw-version-0-1-39"
          >
            <span
              class="DependencyRaw-versionInCaseUpToDate-0-1-41"
            >
              16.8.4
            </span>
          </div>
        </a>
      </li>
      <li
        class="DependencyRaw-li-0-1-36"
      >
        <a
          class="DependencyRaw-link-0-1-37"
          href="https://www.npmjs.com/package/@types/react"
          target="_blank"
        >
          <div
            class="DependencyRaw-name-0-1-38"
          >
            @types/react
          </div>
          <div
            class="DependencyRaw-version-0-1-39"
          >
            <span
              class="DependencyRaw-versionInCaseOutOfDate-0-1-42"
            >
              16.8.3
            </span>
            <button
              class="DependencyRaw-button-0-1-40 btn btn-danger btn-sm"
              type="button"
            >
              <span
                class=" Component-root-0-1-21 Component-size-m-0-1-23"
              >
                <i
                  class="material-icons Component-size-i-m-0-1-26"
                >
                  arrow_upward
                </i>
              </span>
            </button>
          </div>
        </a>
      </li>
      <li
        class="DependencyRaw-li-0-1-36"
      >
        <a
          class="DependencyRaw-link-0-1-37"
          href="https://www.npmjs.com/package/@types/node"
          target="_blank"
        >
          <div
            class="DependencyRaw-name-0-1-38"
          >
            @types/node
          </div>
          <div
            class="DependencyRaw-version-0-1-39"
          >
            <span
              class="DependencyRaw-versionInCaseOutOfDate-0-1-42"
            >
              10.0.0
            </span>
            <button
              class="DependencyRaw-button-0-1-40 btn btn-danger btn-sm"
              type="button"
            >
              <span
                class=" Component-root-0-1-21 Component-size-m-0-1-23"
              >
                <i
                  class="material-icons Component-size-i-m-0-1-26"
                >
                  arrow_upward
                </i>
              </span>
            </button>
          </div>
        </a>
      </li>
    </ul>
  </div>
</div>
`;
